--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -1,4 +1,4 @@
-name: Python Package Build
+name: Python Package Test
 
 on:
   push:
@@ -26,6 +26,14 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install -r dev_requirements.txt
+
+    - name: Test with pytest
+      run: |
+        pytest --cov=./
+
+    - name: Upload Codecov report
+      run: |
+        codecov -t ${{ secrets.CODECOV_REPO_TOKEN }}
     
     - name: Build and Deploy Framework
       run: |
