--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 /dist
 /tmp
 /out-tsc
+/build
+/out
 
 # dependencies
 /node_modules
@@ -19,10 +21,6 @@
 
 # IDE - VSCode
 .vscode/*
-# !.vscode/settings.json
-# !.vscode/tasks.json
-# !.vscode/launch.json
-# !.vscode/extensions.json
 
 # misc
 /.sass-cache
