--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,6 @@
 /dist
 /tmp
 /out-tsc
-/build
-/out
 
 # dependencies
 /node_modules
@@ -21,6 +19,10 @@
 
 # IDE - VSCode
 .vscode/*
+# !.vscode/settings.json
+# !.vscode/tasks.json
+# !.vscode/launch.json
+# !.vscode/extensions.json
 
 # misc
 /.sass-cache
