--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -1,9 +1,10 @@
-name: Python Package Test
+name: Python test
 
 on:
   push:
-    pull_request:
-      - master
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 jobs:
   build:
@@ -15,24 +16,19 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install -r dev_requirements.txt
-
     - name: Test with pytest
       run: |
         pytest --cov=./
-    
-    - name: Build Framework
+    - name: Upload Codecov report
       run: |
-        export PYTHON=python
-        chmod +x ./deploy_version.sh
-        ./deploy_version.sh
+        codecov -t ${{ secrets.CODECOV_REPO_TOKEN }}
+
