--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-aiohttp>=3.6.2
-croniter>=0.3.31
-dnspython>=1.16.0
-motor>=2.1.0
-nest-asyncio>=1.3.2
-pymongo>=3.10.1
-requests>=2.23.0
+aiohttp==3.7.3
+croniter==0.3.36
+dnspython==2.0.0
+motor==2.3.0
+nest-asyncio==1.4.3
+passlib==1.7.4
+Pillow==8.0.1
+PyJWT==2.0.0
+pymongo==3.11.2
+requests==2.25.1
 requests-toolbelt==0.9.1
-passlib>=1.7.2
-Pillow>=6.2.2
-PyJWT>=1.7.1
