--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -2,8 +2,7 @@ name: Python Package Test
 
 on:
   push:
-    pull_request:
-      - master
+  pull_request:
 
 jobs:
   build:
@@ -11,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.8]
+        python-version: [3.8, 3.9]
 
     steps:
     - uses: actions/checkout@v2
@@ -30,9 +29,7 @@ jobs:
     - name: Test with pytest
       run: |
         pytest --cov=./
-    
-    - name: Build Framework
+
+    - name: Upload Codecov report
       run: |
-        export PYTHON=python
-        chmod +x ./deploy_version.sh
-        ./deploy_version.sh
+        codecov -t ${{ secrets.CODECOV_REPO_TOKEN }}
